welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:15: error: identifier expected but integer literal found.
    tab[3]=c
        ^Array1:16: error: ']' expected but ';' found.
    return tab
^